--- a/about/index.html
+++ b/about/index.html
@@ -41,7 +41,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="/">Jami Gibbs</a>
+              <a class="navbar-brand" href="/">Justin Ho</a>
           </div>
           <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
@@ -82,7 +82,7 @@
         <div class="row">
 
           <div class="col-xs-12 col-md-2 col-md-offset-1">
-            <p class="text-muted text-left "><a href="http://localhost:4000">© 2018 Jami Gibbs</a></p>
+            <p class="text-muted text-left "><a href="http://localhost:4000">© 2022 Justin Ho</a></p>
           </div>
 
           <div class="col-xs-12 col-md-6 col-md-offset-2">
