--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
       <div class="content">
   <h3 class="title">Patient Zero</h3>
 
-  <p class="excerpt">Imagine a vaccine that could distribute itself. No more appointments, no more shipping, no more expiration dates. This vaccine would be be created by making a variant of the disease that is highly infectious but less deadly. Then a Patient Zero would be infected and sent into the population to spread the vaccine. Unethical?  Almost certainly. Interesting to study? Absolutely!</p>
+  <p class="excerpt">Imagine a vaccine that could distribute itself. No appointments, no shipping, no expiration dates. This vaccine would be be created by making a more infectious but less deadly variant of the disease. Then a Patient Zero would be infected and sent into the population to spread the vaccine. Unethical?  Almost certainly. Interesting to study? Absolutely!</p>
 
   
   <a href="http://github.com/justinhjy1004/Patient_V/" class="project-link"><button class="btn btn-default btn-lg"><i class="fa fa-github fa-lg"></i>Visit Project</button></a>
@@ -227,7 +227,7 @@
 
     <div class="col-xs-12 col-md-6">
         
-  <img class="img-responsive" src="img/posts/patient_zero.gif" title="Patient Zero">
+  <img class="img-responsive" src="img/posts/patient_zero.png" title="Patient Zero">
   
 
     </div>
