--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
   <p class="excerpt">This is an exploration of a dataset of Airbnb listings in New York City from 2008 to 2021. Here we explored different Data Mining algorithms to identify patterns within the dataset with a strong geospatial emphasis.</p>
 
   
-  <a href="https://github.com/justinhjy1004/ECON409-Project/raw/master/ExploringAirbnb.pdf" class="project-link"><button class="btn btn-default btn-lg"><i class="fa fa-download fa-lg"></i>Download Report</button></a>
+  <a href="https://github.com/justinhjy1004/justinhjy1004.github.io/raw/main/img/ExploringAirbnb.pdf" class="project-link"><button class="btn btn-default btn-lg"><i class="fa fa-download fa-lg"></i>Download Report</button></a>
   
 
   
