added new stuff

--- a/about/index.html
+++ b/about/index.html
@@ -66,9 +66,15 @@
       <div class="row">
         <div class="col-md-8 col-md-offset-2">
 
-          <h2 id="markdown">Markdown</h2>
+          <h2 id="about-me">About Me</h2>
+<p><em>Last Updated: 30th August 2022</em></p>
 
-<p>Text can be <strong>bold</strong>, <em>italic</em>, <del>strikethrough</del> or <code class="language-plaintext highlighter-rouge">keyword</code>.</p>
+<p>I am an undergraduate student in the University of Nebraska-Lincoln, majoring in Economics, Computer Science and Mathematics (in that order). There is something intriguing in all of these fields that I do not necessarily how to put into words, nor how they fit together as human constructs that shape our world as we know it.</p>
+
+<h3 id="interests-and-aspirations">Interests and Aspirations</h3>
+<p>Learning is a life-long goal for me, as well as a journey that I hope to keep until the day I die. This comes in many forms, from travelling to learning a new language to writing code, whichever that draws my attention at that point of time.</p>
+
+<p>As for now, I am applying to PhD Programs pero todavia no se.</p>
 
 
         </div>
@@ -109,7 +115,7 @@
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-      ga('create', ' UA-9999999-99', 'auto');
+      ga('create', ' G-ZJ43FWH1DC', 'auto');
       ga('send', 'pageview');
 
     </script>
