--- a/about/index.html
+++ b/about/index.html
@@ -74,7 +74,7 @@
 <h3 id="interests-and-aspirations">Interests and Aspirations</h3>
 <p>Learning is a life-long goal for me, as well as a journey that I hope to keep until the day I die. This comes in many forms, from travelling to learning a new language to writing code, whichever that draws my attention at that point of time.</p>
 
-<p>As for now, I am applying to PhD Programs pero todavia no se.</p>
+<p>As for now, I am applying to PhD Programs pero todavia no he hecho nada.</p>
 
 
         </div>
