--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                         <h1 id="">About This Page</h1>
                     
 
-                    <p>I intend to have this page as a way to showcase my professional life, but also to document my life, at least for things that I am ready to share.</p>
+                    <p>I intend to have this page as a “portfolio” of my professional life, but also to document my personal one, at least for things that I am ready to share.</p>
 
 <p>I hope to continue and maintain this website. I love learning, sharing, reading and exploring the world. Though this sounds like a LinkedIn post, they are nevertheless true. They don’t define my entirety, nor do I know how to define myself, but I think it does cover quite a few bases.</p>
 
@@ -337,7 +337,7 @@ window.MathJax = {
     },
     "gitbook": {
         "version": "3.2.3",
-        "time": "2023-12-24 13:41:56 -0500"
+        "time": "2023-12-24 14:13:28 -0500"
     },
     "basePath": "",
     "book": {
