--- a/jekyll/2023-12-24-notes.html
+++ b/jekyll/2023-12-24-notes.html
@@ -181,7 +181,7 @@
 
 <div style="text-align: center">
 <a href="https://www.overleaf.com/read/xsvznyjgqdgx#8fe54c" target="_blank" rel="noopener noreferrer">
-<button class="button-23"> <i class="fa fa-github"></i> GitHub Repo
+<button class="button-23"> <i class="fa fa-leaf"></i> Overleaf
 </button> 
 </a>
 </div>
@@ -354,7 +354,7 @@ window.MathJax = {
     },
     "gitbook": {
         "version": "3.2.3",
-        "time": "2023-12-24 16:27:53 -0500"
+        "time": "2023-12-24 16:29:58 -0500"
     },
     "basePath": "",
     "book": {
