--- a/index.html
+++ b/index.html
@@ -172,7 +172,9 @@
                         <h1 id="">About This Page</h1>
                     
 
-                    <p>I intend to have this page as a “portfolio” of my professional life, but also to document my personal one, at least for things that I am ready to share.</p>
+                    <p><em>“No se preocupe, ocupese”</em> - <strong>la abuela de Mariano</strong></p>
+
+<p>I intend to have this page as a “portfolio” of my professional life, but also to document my personal one, at least for things that I am ready to share.</p>
 
 <p>I hope to continue and maintain this website. I love learning, sharing, reading and exploring the world. Though this sounds like a LinkedIn post, they are nevertheless true. They don’t define my entirety, nor do I know how to define myself, but I think it does cover quite a few bases.</p>
 
@@ -361,7 +363,7 @@ window.MathJax = {
     },
     "gitbook": {
         "version": "3.2.3",
-        "time": "2023-12-24 16:29:58 -0500"
+        "time": "2023-12-29 08:38:15 -0500"
     },
     "basePath": "",
     "book": {
