--- a/pages/working/index.html
+++ b/pages/working/index.html
@@ -208,9 +208,18 @@
                         <h1 id="/pages/working">Work Experience</h1>
                     
 
-                    <h3 id="software-developer">Software Developer</h3>
-<p><em>Farm Credit Services of America</em>
-August 2020 - May 2021</p>
+                    <div style="text-align: center"><img src="https://github.com/justinhjy1004/jekyll-gitbook/blob/master/assets/graphs.gif?raw=true" width="500" /></div>
+
+<h3 id="software-developer">Software Developer</h3>
+<p><em>Farm Credit Services of America</em></p>
+
+<p>August 2020 - May 2021</p>
+
+<p><strong>Associate at the Raikes School of Computer Science and Management</strong></p>
+
+<p>This was a senior year project that all Computer Science students have to be part of and thank god I was told to apply to this program! The alternative in the <strong>actual</strong> Computer Science department was a disaster, and nobody ended up learning anything from that experience.</p>
+
+<p>Luck defined that year, with a complete unexpected alignment of what I was doing in my own research, and the privilege to be in a fantastic team, both amongst ourselves (Kyle &amp; Eric, and Sophia &amp; Emily) and our Sponsor (Patrick). Working on technology that I had a lot of passion in (Neo4j’s Graph Database), while learning and picking up ones that grind my gears (C#), it was a blast, and a tipping point for all the opportunities that came after.</p>
 </section>
             </div><div class="search-results">
     <div class="has-results">
@@ -380,7 +389,7 @@ window.MathJax = {
     },
     "gitbook": {
         "version": "3.2.3",
-        "time": "2024-01-21 09:43:35 -0500"
+        "time": "2024-01-21 09:57:42 -0500"
     },
     "basePath": "",
     "book": {
