--- a/pages/about/index.html
+++ b/pages/about/index.html
@@ -199,7 +199,7 @@
                         <h1 id="/pages/about">About Me</h1>
                     
 
-                    <div style="text-align: center"><img src="https://media.licdn.com/dms/image/C4E03AQH_LBcQm-b2VA/profile-displayphoto-shrink_800_800/0/1600555510381?e=1708560000&amp;v=beta&amp;t=yDkHWBwj79giEE0hDW2Tike5BuFf9th83LDF0Xxl0KU" width="250" /></div>
+                    <div style="text-align: center"><img src="https://github.com/justinhjy1004/Patient_V/blob/main/Photoshoot1.jpg?raw=true" width="250" /></div>
 
 <p><br /></p>
 
@@ -390,7 +390,7 @@ window.MathJax = {
     },
     "gitbook": {
         "version": "3.2.3",
-        "time": "2024-06-02 07:01:14 -0400"
+        "time": "2024-06-02 07:06:51 -0400"
     },
     "basePath": "",
     "book": {
