--- a/jekyll/2023-12-24-books.html
+++ b/jekyll/2023-12-24-books.html
@@ -239,6 +239,8 @@
 
 <p><br /></p>
 
+<p>I have never thought that languages can be so interesting, quirky, weird and a defining interest of a person. That being said, I am of course an aspiring GigaChad polyglot that knows my way perfectly about the nuances of natural languages, but definitely not the world of ConLang. The author neatly demonstrates how many of these languages were constructed out of idealistic goals, for world peace or perfect, rational thought, or to even prove to Sapir-Whorf hypothesis. Yet ironically the most successful of all, is Klingon, a constructed language meant to be difficult, horrible sounding, and honestly pointless from a ‘rational’ perspective, yet carries enough aesthetic meaning (if you can call that) to learners of this language that it has survived thus far. I still could not believe that some people actually would take a vow of only speaking Klingon, which is a prime example of a deliciously useless idea!</p>
+
 <h3 id="evicted">Evicted</h3>
 
 <p><em>Mid September 2024</em></p>
@@ -528,7 +530,7 @@ window.MathJax = {
     },
     "gitbook": {
         "version": "3.2.3",
-        "time": "2024-10-19 07:39:25 -0400"
+        "time": "2024-10-19 07:50:07 -0400"
     },
     "basePath": "",
     "book": {
