--- a/jekyll/2023-12-24-books.html
+++ b/jekyll/2023-12-24-books.html
@@ -223,6 +223,10 @@
 
 <p><br /></p>
 
+<p>Generations is an interesting book. In some ways, it reminded me of Steven Pinker’s <em>The Better Angels of Our Nature</em>, and not necessarily in a good way. I do think that the book offers an interesting, and very thorough description of the different generations in the United States, starting from the Silent Generation to Generation Alpha today. It also contextualizes history, not purely from factual recounts of what had happened, but also how it was perceived by different generations given the social norms and mores of the time. That I really enjoyed. I thought if the book has been more of just that, I’d be very satisfied as an exploration of the differences in how different generations perceive the world (with some caveats of course!). However, I do think that the ‘causal’ argument that Twenge tries to putforth is a little wanting, largely because with the ‘twin pillars’ of <em>individualism</em> and <em>technology</em>, it seems like she is trying to convince readers that both these forces are responsible for the differences in the generations.</p>
+
+<p>Less the ambiguity of what one means when they say <em>individualism</em> or <em>changes in technology</em>, I do not think that she provided a very convincing argument that a lot of these changes are caused by these two factors. Of course, because of the ambiguity inherent in the definitions of the two terms, this is also not falsifiable since one can plausibly read any political changes as a movement towards individualism, or as a result of a change in some technology. This ill-defined notion left me quite skeptical with subsequent chapters, and perhaps I am overly critical of this (because I actually really enjoyed the rest of the book), but I do not agree with the main thesis, or at least the main thesis is moot given the ambiguity of supposed ‘root causes’ of our observed generational shifts.</p>
+
 <h3 id="kindred">Kindred</h3>
 
 <p><em>Early October 2024</em></p>
@@ -230,6 +234,8 @@
 <div style="text-align: center"><img src="https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1339423248i/60931.jpg" width="150" /></div>
 
 <p><br /></p>
+
+<p>It is both an easy and difficult to read. Easy because Butler actively avoids using complicated prose in her writing and there is a sense of rawness to her words that painted the conditions in which our protaganist has to live in. Difficult because the story deals with a black woman being forced to help her white ancestor who owned and abused her ancestors who are black. It is easy to acclimatize oneself to slavery, especially with the conditions at hand. Butler explores this very painful truth, when one justifies taking certain actions to ensure one’s survival, or when one has a deep (though not consensual) connection with another, it is easy to fall into justifying our greatest demons. As one YouTuber puts it, Kindred is not a horror Sci-Fi novel, it is a horrifying one.</p>
 
 <h3 id="in-the-land-of-invented-languages">In the Land of Invented Languages</h3>
 
@@ -530,7 +536,7 @@ window.MathJax = {
     },
     "gitbook": {
         "version": "3.2.3",
-        "time": "2024-10-19 07:59:56 -0400"
+        "time": "2024-10-19 08:48:45 -0400"
     },
     "basePath": "",
     "book": {
