--- a/jekyll/2023-12-24-books.html
+++ b/jekyll/2023-12-24-books.html
@@ -217,7 +217,9 @@
 
 <p><br /></p>
 
-<p>TODO</p>
+<p>Being remembered for one awful thing for your entire existence (at least from the lens of a common person) is awful. It is worse when that awful thing is Pablo Escobar and the many cocaine traficking groups that exist in your country. Feiling was an amazing storyteller, and perhaps a little bit of a historian (since I am reading it 10 years after its publication), as he brings to live the post-Escobar Colombia that many do not know of. I do not know much of this country either, other than not being able to visit Colombia with my Malaysian passport without a visa, and I told Nathan that this is my way to knowing Bogota (and Medellin and Cali too) from the comfort of a book. Of course, being a tourist today in modern day Colombia is not all too adventurous (as Feiling would tell me) given the darkest days are hopefully in Colombia’s past.</p>
+
+<p>But Colombia to me is perhaps a little different from the ‘typical’ American knowledge or exposure to the country. I first grew interested from it because of Oscar. Then, more so after Encanto and Cien Años de La Soledad (surprisingly not due to Narcos, I didn’t know nor care much of Latin America then). This puts all into context the many things about Colombia, and Colom ians. The crazy tips of como no dar papaya a los demás that Oscar told me when I said I was going to Mexico (I did not unfortunately due to this maldita universidad en que yo trabajo). Pero, es lo que es. Colombia es, y será el país que me fascina. Espero que en algun día, puedo ir a cononcerlo.</p>
 
 <h3 id="on-bullshit">On Bullshit</h3>
 
@@ -227,7 +229,7 @@
 
 <p><br /></p>
 
-<p>The clear distinction of TODO</p>
+<p>It is rather sad that I feel so connected reading this book, thinking and reflecting to myself how much bullshit that surrounds us. The very interesting distinction that Frankfurt draws between bullshit and outright lying is quite illuminating, considering the growth of such things in our professional life. Currently as I am working in the world’s most prestigious institution in the production and education of people who can attest to their abilities in such work, a closer (and philosophical) take on this weird phenomenon that we partake (and I am certainly no exception to it), is eye-opening. Not the folly of our current society, but of a human behavior that we do all too well.</p>
 
 <h3 id="pedro-paramo">Pedro Paramo</h3>
 
@@ -608,7 +610,7 @@ window.MathJax = {
     },
     "gitbook": {
         "version": "3.2.3",
-        "time": "2024-12-04 08:10:05 -0500"
+        "time": "2024-12-04 17:22:36 -0500"
     },
     "basePath": "",
     "book": {
