--- a/jekyll/2023-12-24-books.html
+++ b/jekyll/2023-12-24-books.html
@@ -207,7 +207,9 @@
 
 <p><br /></p>
 
-<p>TODO</p>
+<p>A must reread, and god damn, what a book. I think I honestly have not experienced and appreciated the cleverness of this book simply because of my lack of knowledge in SciFi references and (Dominican) Spanish. I really did not imagine going into this book, a Pulitzer prize winning one in fact, to sound so much like a very well written Reddit post, peppered with slang, both in Spanish and English.</p>
+
+<p>As much as I enjoyed this book from Diaz’s literary style, I couldn’t help but feel sad that the story, in its ‘magical realist’ influence, was somewhat true. With the Trujillato as a Culocracia in the most brutal, sadistic sense. I have only been exposed to the dark history of the Dominican Republic from Ted-Ed, where I first learned about the Haitian genocide, and their other work on the Mariposas Sisters. The tragedy of it all, and how Diaz retold it, just was heartbreaking, especially when Belí had to leave her hometown, all because of the damn fukú that haunted the grandfather, the mother, and the grandson. A brief and wondrous life indeed.</p>
 
 <h3 id="short-walks-from-bogota">Short Walks from Bogota</h3>
 
@@ -610,7 +612,7 @@ window.MathJax = {
     },
     "gitbook": {
         "version": "3.2.3",
-        "time": "2024-12-04 17:22:36 -0500"
+        "time": "2024-12-04 18:01:25 -0500"
     },
     "basePath": "",
     "book": {
