--- a/jekyll/2023-12-24-books.html
+++ b/jekyll/2023-12-24-books.html
@@ -207,9 +207,9 @@
 
 <p><br /></p>
 
-<p>I have yet to finish the book, but I do feel an urge to write about it given the context (boxing day at Nathan’s) and I never expected myself to relate quite so deeply with a millenial, white, straight woman in her 30s, from London. As she writes her story about the various parties (and their aftermaths), the mundane aspects of a life riddled with neuroticism, and the pain that comes losing your loved ones, and seeing your loved ones lose theirs. These stories are not all too strange for any human who has lived at least two decades long, and it would have taken a miracle to avoid all of that.</p>
+<p>I’d love to think of myself of a very unique person, with a very special story that no one else has ever experienced. That is true in the most technical, pedantic sense, and our society does reinforce that concept, again and again, that your value comes from the ability to distinguish. Yet books like Alderton’s make me realize how similar our lived experiences are, as I mapped her dream-hazed teenage years, her wild party girl years, the unadulterated exposé of early adulting, and just the mess our 20s can be. Being solidly in my mid-twenties, I cannot help but laugh and ache at the things we have to go through.</p>
 
-<p>These defining moments surface a lot of ugliness, most of which are too difficult for me to even stomach. But Alderton helped many of her readers spell out the mundane vanities, narcissisms, and jealousy to lurk within us, which surprised me a littlesince these are in some way, so universally felt, yet so universally hidden.</p>
+<p>Friends are important. Love is important. Truths that my 6-year-old self would have agreed. Though they have changed considerably when your friends start living different lives, and love is sometimes seeing them grow and go, as you set sail for yours too. It is no easy task, nor is it always one that is forgiving. But they indelibly mark your life, and so choose them wisely, Justin.</p>
 
 <h3 id="the-brief-wondrous-life-of-oscar-wao">The Brief Wondrous Life of Oscar Wao</h3>
 
@@ -624,7 +624,7 @@ window.MathJax = {
     },
     "gitbook": {
         "version": "3.2.3",
-        "time": "2024-12-26 11:03:08 -0500"
+        "time": "2024-12-27 08:02:15 -0500"
     },
     "basePath": "",
     "book": {
