--- a/pages/about/index.html
+++ b/pages/about/index.html
@@ -199,15 +199,15 @@
                         <h1 id="/pages/about">About Me</h1>
                     
 
-                    <div style="text-align: center"><img src="https://github.com/justinhjy1004/jekyll-gitbook/blob/master/assets/Photoshoot1.jpg?raw=true" width="250" /></div>
+                    <p><em>Last Updated June 4, 2025</em></p>
+
+<div style="text-align: center"><img src="https://github.com/justinhjy1004/jekyll-gitbook/blob/master/assets/Photoshoot1.jpg?raw=true" width="250" /></div>
 
 <p><br /></p>
 
-<p>The obituary style picture is my profile picture in LinkedIn, and that could explain my lack of success in the job market overall. Currently, I am a Research Associate at Harvard Business School.</p>
+<p>Former Research Associate at Harvard, currently funemployed. Taking a break after all that has transpired in the land that I once thought would be the place I call home, after all my hopes and dreams have been crushed, and all the people and squoose I have to leave behind, so swiftly by a single man. Oh, I don’t know what the future holds for me, I am both anxious and excited.</p>
 
-<p>I studied in the University of Nebraska-Lincoln for my undergraduate degree, and aspiring to get a PhD sometime in the future. As to which PhD program, I do not know, and my interest lies sporadically and widely across Economics, Philosophy, Social Sciences, Linguistics in general, but also Mathematics and Computer Science.</p>
-
-<p>Does that make me a polymath? No. Definitely not. An aspiring polymath maybe, but that is no longer a thing in the world that I currently live in. That is a whole separate rabbit hole that I don’t want to go into this page. But that is me in a nutshell, not the most interesting person in the world, and I am learning how to be okay with that.</p>
+<p>Though I know one thing for sure. Regardless of my situation, I am a committed life long learner. My time in Boston has opened up a world so fascinating and so interesting that all that has happened would not be enough to stop me from continuing my academic curiosity. It has been a difficult time, and what is ahead of me, I do reserve plenty of fear just for that, but I know through it all, I will be okay.</p>
 </section>
             </div><div class="search-results">
     <div class="has-results">
@@ -390,7 +390,7 @@ window.MathJax = {
     },
     "gitbook": {
         "version": "3.2.3",
-        "time": "2025-02-08 06:48:19 -0500"
+        "time": "2025-06-04 17:38:22 -0400"
     },
     "basePath": "",
     "book": {
