--- a/index.html
+++ b/index.html
@@ -194,9 +194,19 @@
                         <h1 id="">About This Page</h1>
                     
 
-                    <p>I intend to have this page as a “portfolio” of my professional life, but also to document my personal one, at least for things that I am ready to share.</p>
+                    <center><strong><em>Hat man sein Warum? des Lebens, so verträgt man sich fast mit jedem Wie? — Friedrich Nietzsche</em></strong></center>
+
+<p><br /></p>
+
+<p>I intend to have this page as a “portfolio” of my professional life, but also to document my personal one, at least for things that I am ready to share.</p>
 
 <p>I hope to continue and maintain this website. I love learning, sharing, reading and exploring the world. Though this sounds like a LinkedIn post, they are nevertheless true. They don’t define my entirety, nor do I know how to define myself, but I think it does cover quite a few bases.</p>
+
+<p><em>Summer of 2025</em></p>
+
+<p>TODO</p>
+
+<p><em>Summer of 2023</em></p>
 
 <div style="text-align: center"><img src="https://github.com/justinhjy1004/jekyll-gitbook/blob/master/assets/seoul_wtih_mum_and_sis.jpg?raw=true" width="450" /></div>
 
@@ -383,7 +393,7 @@ window.MathJax = {
     },
     "gitbook": {
         "version": "3.2.3",
-        "time": "2025-06-04 18:02:47 -0400"
+        "time": "2025-06-04 18:07:30 -0400"
     },
     "basePath": "",
     "book": {
