--- a/pages/publications/index.html
+++ b/pages/publications/index.html
@@ -203,7 +203,19 @@
 
 <p><br /></p>
 
-<p>Wow so empty…</p>
+<h5 id="working-papers">Working Papers</h5>
+
+<p>Ho, Justin; and Min, Jonathan. <strong>“Causal Inference in Counterbalanced Within-Subjects Designs.”</strong> <em>arXiv preprint</em>, arXiv:2505.03937 [stat.ME], May 6, 2025. <a href="https://arxiv.org/abs/2505.03937">https://arxiv.org/abs/2505.03937</a></p>
+
+<p>Ho, Justin; and Mann, Christopher Ryan. <strong>“The Bandwagon Effect: Firm Choice and Selection in Research &amp; Development.”</strong> <em>SSRN Working Paper</em>, May 13, 2024. <a href="https://ssrn.com/abstract=4826211">https://ssrn.com/abstract=4826211</a></p>
+
+<h5 id="conference-papers">Conference Papers</h5>
+
+<p>Ho, Justin; Colby, Alexandra; and Fisher, William. <strong>“Incorporating Legal Structure in Retrieval-Augmented Generation: A Case Study on Copyright Fair Use.”</strong> <em>Proceedings of the Seventh Workshop on Automated Semantic Analysis of Information in Legal Text (ASAIL 2025)</em>, June 16, 2025, Chicago, USA. (Accepted as Full Paper) <a href="https://arxiv.org/abs/2505.02164">arXiv</a></p>
+
+<p><br /></p>
+
+<p>Ayoubi, Charles; Boussioux, Leonard; Chen, YingHao; Ho, Justin; Jackson, Katherine; Lane, Jacquelin; Lin, Camila; and Spens, Rebecca. <strong>“The Narrative AI Advantage? A Field Experiment on Generative AI-Augmented Evaluations of Early-Stage Innovations.”</strong> <em>ICIS 2024 Proceedings</em>, Paper 2, 2024. <a href="https://aisel.aisnet.org/icis2024/aiinbus/aiinbus/2">https://aisel.aisnet.org/icis2024/aiinbus/aiinbus/2</a></p>
 </section>
             </div><div class="search-results">
     <div class="has-results">
@@ -386,7 +398,7 @@ window.MathJax = {
     },
     "gitbook": {
         "version": "3.2.3",
-        "time": "2025-06-04 18:07:30 -0400"
+        "time": "2025-06-04 23:32:54 -0400"
     },
     "basePath": "",
     "book": {
