--- a/pages/publications/index.html
+++ b/pages/publications/index.html
@@ -199,13 +199,13 @@
                         <h1 id="/pages/publications">Publications</h1>
                     
 
-                    <h5 id="working-papers">Working Papers</h5>
+                    <h5 id="economics-and-statistics">Economics and Statistics</h5>
 
 <p>Ho, Justin; and Min, Jonathan. <strong>“Causal Inference in Counterbalanced Within-Subjects Designs.”</strong> <em>arXiv preprint</em>, arXiv:2505.03937 [stat.ME], May 6, 2025. <a href="https://arxiv.org/abs/2505.03937">https://arxiv.org/abs/2505.03937</a></p>
 
 <p>Ho, Justin; and Mann, Christopher Ryan. <strong>“The Bandwagon Effect: Firm Choice and Selection in Research &amp; Development.”</strong> <em>SSRN Working Paper</em>, May 13, 2024. <a href="https://ssrn.com/abstract=4826211">https://ssrn.com/abstract=4826211</a></p>
 
-<h5 id="conference-papers">Conference Papers</h5>
+<h5 id="computer-science">Computer Science</h5>
 
 <p>Ho, Justin; Colby, Alexandra; and Fisher, William. <strong>“Incorporating Legal Structure in Retrieval-Augmented Generation: A Case Study on Copyright Fair Use.”</strong> <em>Proceedings of the Seventh Workshop on Automated Semantic Analysis of Information in Legal Text (ASAIL 2025)</em>, June 16, 2025, Chicago, USA. (Accepted as Full Paper) <a href="https://arxiv.org/abs/2505.02164">arXiv</a></p>
 
@@ -394,7 +394,7 @@ window.MathJax = {
     },
     "gitbook": {
         "version": "3.2.3",
-        "time": "2025-06-04 23:36:25 -0400"
+        "time": "2025-06-04 23:37:04 -0400"
     },
     "basePath": "",
     "book": {
