--- a/pages/publications/index.html
+++ b/pages/publications/index.html
@@ -199,13 +199,13 @@
                         <h1 id="/pages/publications">Publications</h1>
                     
 
-                    <h5 id="economics">Economics</h5>
+                    <h5 id="statistics--causal-inference">Statistics / Causal Inference</h5>
 
-<p>Ho, Justin; and Min, Jonathan. <strong>“Causal Inference in Counterbalanced Within-Subjects Designs.”</strong> <em>arXiv preprint</em>, arXiv:2505.03937 [stat.ME], May 6, 2025. <a href="https://arxiv.org/abs/2505.03937">https://arxiv.org/abs/2505.03937</a></p>
+<p><strong>Ho, Justin</strong>; and Min, Jonathan. <strong>“Causal Inference in Counterbalanced Within-Subjects Designs.”</strong> <em>arXiv preprint</em>, arXiv:2505.03937 [stat.ME], May 6, 2025. <a href="https://arxiv.org/abs/2505.03937">https://arxiv.org/abs/2505.03937</a></p>
 
-<h5 id="statistics">Statistics</h5>
+<h5 id="economics">Economics</h5>
 
-<p>Ho, Justin; and Mann, Christopher Ryan. <strong>“The Bandwagon Effect: Firm Choice and Selection in Research &amp; Development.”</strong> <em>SSRN Working Paper</em>, May 13, 2024. <a href="https://ssrn.com/abstract=4826211">https://ssrn.com/abstract=4826211</a></p>
+<p><strong>Ho, Justin</strong>; and Mann, Christopher Ryan. <strong>“The Bandwagon Effect: Firm Choice and Selection in Research &amp; Development.”</strong> <em>SSRN Working Paper</em>, May 13, 2024. <a href="https://ssrn.com/abstract=4826211">https://ssrn.com/abstract=4826211</a></p>
 
 <h5 id="computer-science">Computer Science</h5>
 
@@ -396,7 +396,7 @@ window.MathJax = {
     },
     "gitbook": {
         "version": "3.2.3",
-        "time": "2025-06-05 11:07:16 -0400"
+        "time": "2025-06-05 11:08:28 -0400"
     },
     "basePath": "",
     "book": {
