--- a/jekyll/2023-12-24-notes.html
+++ b/jekyll/2023-12-24-notes.html
@@ -399,12 +399,12 @@ window.MathJax = {
     },
     "file": {
         "path": "_posts/2023-12-24-notes.md",
-        "mtime": "2023-12-24 00:00:00 -0500",
+        "mtime": "2023-12-24 00:00:00 +0800",
         "type": "markdown"
     },
     "gitbook": {
         "version": "3.2.3",
-        "time": "2025-06-05 11:14:06 -0400"
+        "time": "2025-06-30 16:09:09 +0800"
     },
     "basePath": "",
     "book": {
