--- a/pages/projects/index.html
+++ b/pages/projects/index.html
@@ -436,12 +436,12 @@ window.MathJax = {
     },
     "file": {
         "path": "_pages/projects.md",
-        "mtime": "2023-12-23 00:00:00 -0500",
+        "mtime": "2023-12-23 00:00:00 +0800",
         "type": "markdown"
     },
     "gitbook": {
         "version": "3.2.3",
-        "time": "2025-06-05 11:14:06 -0400"
+        "time": "2025-06-30 16:09:09 +0800"
     },
     "basePath": "",
     "book": {
