--- a/pages/teaching/index.html
+++ b/pages/teaching/index.html
@@ -381,12 +381,12 @@ window.MathJax = {
     },
     "file": {
         "path": "_pages/teaching.md",
-        "mtime": "2024-01-11 00:00:00 -0500",
+        "mtime": "2024-01-11 00:00:00 +0800",
         "type": "markdown"
     },
     "gitbook": {
         "version": "3.2.3",
-        "time": "2025-06-05 11:14:06 -0400"
+        "time": "2025-06-30 16:09:09 +0800"
     },
     "basePath": "",
     "book": {
